--- a/checkpoint3/alternateporfolio/css/style.css
+++ b/checkpoint3/alternateporfolio/css/style.css
@@ -1,12 +1,18 @@
 *{
     margin:0;
+    scroll-snap-type: proximity;
 }
 .trees {
     font-family: 'Abril Fatface', cursive;
     background-color:black;
-background-image: url(../images/2trees.jpg);
-background-size: cover;
-background-position-x: center;
+    /* The image used */
+    background-image: url("../images/2trees.jpg");
+
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 width:100vw;
     color:white;
     justify-content: center;
@@ -15,20 +21,29 @@ width:100vw;
     justify-items:center;
 }
 .trees, h1 {
-  font-size: 3em;
+  font-size: 2.5em;
 }
 .trees, #flip {
     font-family: 'Abril Fatface', cursive;
     background-color:black;
-background-image: url(../images/2trees.jpg);
-background-size: cover;
-background-position-x: center;
+    /* The image used */
+    background-image: url("../images/2trees.jpg");
+
+
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
 width:100vw;
     color:white;
     justify-content: center;
     align-content: center;
     text-align:center;
     justify-items:center;
+    scroll-snap-coordinate: 0 0;
+
 }
 #panel{
     width:100%;
@@ -47,8 +62,9 @@ width:100vw;
     align-content: center;
     text-align:center;
     justify-items:center;
+    scroll-snap-coordinate: 0 0;
 }
-.lantern, #flip2{
+.lantern, #flipp{
     font-family: 'Abril Fatface', cursive;
     background-color:black;
 background-image: url(../images/candelabra.jpg);
@@ -60,6 +76,12 @@ width:100vw;
     align-content: center;
     text-align:center;
     justify-items:center;
+}
+#panell{
+    width:100%;
+    height:95vh;
+    display: none;
+
 }
 .openstory{
     font-family: 'Abril Fatface', cursive;
@@ -74,6 +96,7 @@ height:95vh;
     align-content: center;
     text-align:center;
     justify-items:center;
+    scroll-snap-coordinate: 0 0;
 }
 .angel{
     font-family: 'Abril Fatface', cursive;
@@ -88,6 +111,7 @@ height:100vh;
     align-content: center;
     text-align:center;
     justify-items:center;
+    scroll-snap-coordinate: 0 0;
 
 }
 #img1{
