--- a/Checkpoint-3/style.css
+++ b/Checkpoint-3/style.css
@@ -1,13 +1,71 @@
 body {
-  color: red;
+  height: 100vh;
+  width: 100vw;
+  color: #404040;
   text-align: center;
   font-size: 40px;
+  background: #B8BAB9;
 }
 
 .box {
-  height: 100px;
-  width: 100px;
-  background-color: blue;
+  height: 200px;
+  width: 200px;
+  background-color: #102770;
   user-select: none;
-  
+  margin: auto;
+  padding: auto;
 }
+
+#gun {
+  background-image: url(./images.jpg/gun.jpg);
+  background-size: 100%;
+  /* Start the shake animation and make the animation last for 0.5 seconds */
+  animation: shake 0.5s;
+  /* When the animation is finished, start again */
+  animation-iteration-count: 1s;
+}
+
+
+@keyframes shake {
+  0% { transform: translate(1px, 1px) rotate(0deg); }
+  10% { transform: translate(-1px, -2px) rotate(-1deg); }
+  20% { transform: translate(-3px, 0px) rotate(1deg); }
+  30% { transform: translate(3px, 2px) rotate(0deg); }
+  40% { transform: translate(1px, -1px) rotate(1deg); }
+  50% { transform: translate(-1px, 2px) rotate(-1deg); }
+  60% { transform: translate(-3px, 1px) rotate(0deg); }
+  70% { transform: translate(3px, 1px) rotate(-1deg); }
+  80% { transform: translate(-1px, -1px) rotate(1deg); }
+  90% { transform: translate(1px, 2px) rotate(0deg); }
+  100% { transform: translate(1px, -2px) rotate(-1deg); }
+}
+
+#click-box {
+  height: 300px;
+  width: 300px;
+  font-size: 100px;
+  font-weight: bold;
+  text-transform: uppercase;
+  background-color: red;
+}
+
+.weapon-box {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin-top: 150px;
+  font-size: 75px;
+ }
+
+ .weapon1 {
+   border: 1px solid black;
+
+  }
+  
+  .weapon2 {
+    border: 1px solid black;
+  }
+  
+  .weapon3 {
+    border: 1px solid black;
+ }
