--- a/03week/airplane/css/style.css
+++ b/03week/airplane/css/style.css
@@ -29,6 +29,10 @@ a {
     text-decoration: none;
 }
 
+a:hover {
+    color: #048c80;
+}
+
 main {
     height: 100%;
 
@@ -55,9 +59,10 @@ main {
 }
 
 .forms {
-    height: 400px;
+    height: 325px;
     width: 390px;
     margin: 100px;
+    border-radius: 5px;
     background-color: #183A55;
 }
 
@@ -67,6 +72,7 @@ main {
     display: block;
     margin: 0px;
     border: none;
+    border-top-left-radius: 5px;
     float: left;
     background-image: url(../img/plane-icon.png);
     background-color: #048c80;
@@ -95,12 +101,17 @@ main {
     display: block;
     margin: 0px;
     border: none;
+    border-top-right-radius: 5px;
     float: left;
     background-image: url(../img/car-icon.png);
     background-color: #048c80;
     background-repeat: no-repeat;
     background-position: center center;
     background-size: 25px;
+}
+
+.btn:hover {
+    background-color: #0163b7;
 }
 
 button:selection {
@@ -112,6 +123,7 @@ button:selection {
     height: 30px;
     display: block;
     margin: 20px 5px;
+    border-radius: 5px;
     float: left;
     background-color: #183A55;
     border: 2px solid white;
@@ -123,6 +135,7 @@ button:selection {
     height: 30px;
     display: block;
     margin: 20px 5px;
+    border-radius: 5px;
     float: left;
     background-color: #183A55;
     border: 2px solid white;
@@ -134,6 +147,7 @@ button:selection {
     height: 30px;
     display: block;
     margin: 15px 5px;
+    border-radius: 5px;
     float: left;
     background-color: #183A55;
     border: 2px solid white;
@@ -145,6 +159,7 @@ button:selection {
     height: 30px;
     display: block;
     margin: 15px 5px;
+    border-radius: 5px;
     float: left;
     background-color: #183A55;
     border: 2px solid white;
@@ -168,6 +183,7 @@ select {
     height: 30px;
     display: block;
     margin: 10px 5px;
+    border-radius: 5px;
     float: left;
     background-color: #183A55;
     border: 2px solid white;
@@ -204,6 +220,7 @@ select {
     width: 370px;
     height: 50px;
     margin: 10px 5px;
+    border-radius: 5px;
     border: none;
     background-color: #0163b7;
 }
