--- a/03week/airplane/css/style.css
+++ b/03week/airplane/css/style.css
@@ -78,3 +78,11 @@ input{
     width: 122px;
     background-color: #183A55;
 }
+
+radio{ 
+    margin: 0px;
+    border: 0px;
+    padding: 0px;
+    width: 13px;
+    height: 13px;
+}
