fixed stuff on airplane(week3) and checkpoint 2 (fixed link to airplane)

--- a/03week/airplane/css/style.css
+++ b/03week/airplane/css/style.css
@@ -7,6 +7,8 @@
 }
 
 body {
+  margin: 0;
+  padding: 0;
   background-image: url(/03week/airplane/img/airline.jpg);
   background-repeat: repeat;
   background-position: center;
@@ -138,4 +140,9 @@ label {
 
 .btn:hover {
   background-color: #018D80;
+}
+
+nav a:hover {
+  transition: ease-in .5s;
+  border-bottom: double white 10px;
 }
