changed navbar links to unordered list & modified CSS to compensate

--- a/03week/airplane/css/style.css
+++ b/03week/airplane/css/style.css
@@ -1,8 +1,12 @@
+/* background styles */
+
 body {
  background-image: url(../img/airline.jpg);
  background-size: 100%;
  background-repeat: no repeat;
 }
+
+/* header styles */
 
 header {
     position: fixed;
@@ -26,7 +30,13 @@ header {
     margin-top: 20px;
 }
 
-.links > a {
+li {
+    display: inline;
+    list-style-type: none;
+    padding: 5px;
+}
+
+li > a {
     font-size: 12px;
     font-family: 'Open Sans', sans-serif;
     text-decoration: none;
@@ -53,6 +63,8 @@ header {
     content: url(../img/login-icon.png);
     margin: 2px;
 }
+
+/* selector form styles */
 
 .form {
     height: 350px;
@@ -171,7 +183,7 @@ header {
     height: 30px;
     width: 50px;
     margin-right: 18px;
-    background-color: #193A55;
+    background-color: #123754;
     border: 1px solid white;
     border-radius: 4px;
     font-family: 'Open Sans', sans-serif;
