fixed image issue

--- a/03week/airplane/css/style.css
+++ b/03week/airplane/css/style.css
@@ -9,7 +9,7 @@
 body {
   margin: 0;
   padding: 0;
-  background-image: url(/03week/airplane/img/airline.jpg);
+  background-image: url(./03week/airplane/img/airline.jpg);
   background-repeat: repeat;
   background-position: center;
   background-size: cover;
