--- a/checkpoint-3/css/memorystyle.css
+++ b/checkpoint-3/css/memorystyle.css
@@ -6,6 +6,8 @@
 
 body {
   font-family: "Roboto";
+  background-color: rgb(61, 61, 61);
+  color: white;
 }
 
 /* Styling for header  */
@@ -19,6 +21,7 @@ header {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  border-bottom: 2px solid orange;
   font-size: 52px;
   color: black;
 }
@@ -31,7 +34,7 @@ header strong {
 
 main {
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: baseline;
@@ -68,8 +71,8 @@ main {
 }
 
 .square2 {
-  background-color: rgb(46, 61, 73);
-  color: white;
+  background-color: rgb(195, 78, 78);
+  color: black;
   display: inline-block;
   border: 2px solid none;
   margin: 5px;
@@ -85,12 +88,12 @@ main {
 }
 
 .square2:hover {
-  box-shadow: inset 0px 0px 0px 5px orange;
+  box-shadow: inset 0px 0px 0px 5px white;
   transition: all 0.3s ease-in-out;
 }
 
 .flipped {
-  background-color: rgb(2, 204, 186);
+  background-color: rgb(241, 255, 32);
   transition: all 0.3s ease-in-out;
 }
 .matched {
@@ -98,7 +101,7 @@ main {
 }
 
 #newgame2 {
-  background-color: rgb(46, 61, 73);
+  background-color: rgb(195, 78, 78);
   color: white;
   padding: 6px 8px;
   width: 47%;
@@ -112,7 +115,8 @@ main {
 }
 
 #newgame2:hover {
-  background-color: rgb(2, 204, 186);
+  background-color: rgb(241, 255, 32);
+  color: black;
   transition: all 0.3s ease-in-out;
 }
 
