--- a/checkpoint-3/css/minesweeperstyle.css
+++ b/checkpoint-3/css/minesweeperstyle.css
@@ -6,11 +6,13 @@
 
 body {
   font-family: "Roboto";
+  background-color:aliceblue;
 }
 
 /* Styling for header  */
 header {
   height: 100px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -19,6 +21,7 @@ header {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  border-bottom: 2px solid rgb(226, 67, 67);
   font-size: 52px;
   color: black;
 }
@@ -32,7 +35,7 @@ header strong {
 
 main {
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: baseline;
