--- a/Checkpoint 2.0/style.css
+++ b/Checkpoint 2.0/style.css
@@ -1,6 +1,13 @@
+#logo {
+    height: 140px;
+    width: auto;
+    padding-top: 60px;
+    padding-bottom: 20px;
+}
 .body {
     margin: 0;
     padding: 0;
+    height: 1200px;
 }
 .maincontain {
     background-color: black;
@@ -27,6 +34,8 @@
     align-items: center;
     height: 40px;
     color: white;
+    padding-bottom: 40px;
+    padding-top: 10;
 }
     
 .bodycontain {
@@ -38,9 +47,15 @@
     position: relative;
     width: 100%;
 }
+a {
+    text-decoration: none;
+    
+} 
 li {
     display: inline;
-    margin:18px;}
+    margin:18px;
+    color: white;
+}
 
 li:hover {
     display: inline;
@@ -74,19 +89,25 @@ li:hover {
     width: 700px;
     display: grid;
     grid-template-columns: 2fr 2fr;
-    grid-gap: 35px;
+    grid-gap: 50px;
     justify-content: center;
     align-items: center;
     margin-top: 10px;
     margin-bottom: 10px;
     padding-top: 30px;
+    padding-bottom: 100px;
     
 }
 
 
 
 @media (max-width: 576px) {
-    
+    #logo {
+        height: 100px;
+        width: auto;
+        padding-top: 60px;
+        padding-bottom: 20px;
+    }
     .tophalf {
         display: grid;
         align-content: center;
@@ -107,8 +128,8 @@ li:hover {
 
     li {
         display: inline;
-        margin:2px;
-        font-size:12px;
+        margin:6px;
+        font-size:14px;
     }
     .banner{
         text-align: center;
