--- a/checkpoint3/alternateporfolio/css/style.css
+++ b/checkpoint3/alternateporfolio/css/style.css
@@ -6,7 +6,7 @@
     font-family: 'Abril Fatface', cursive;
     background-color:black;
     /* The image used */
-    background-image: url("images/2trees.jpg");
+    background-image: url("/images/2trees.jpg");
 
     /* Create the parallax scrolling effect */
     background-attachment: fixed;
@@ -27,7 +27,7 @@ width:100vw;
     font-family: 'Abril Fatface', cursive;
     background-color:black;
     /* The image used */
-    background-image: url("images/2trees.jpg");
+    background-image: url("/images/2trees.jpg");
 
 
     /* Create the parallax scrolling effect */
@@ -53,7 +53,7 @@ width:100vw;
 .lantern{
     font-family: 'Abril Fatface', cursive;
     background-color:black;
-background-image: url(images/candelabra.jpg);
+background-image: url("/images/candelabra.jpg");
 background-size: cover;
 background-position-x: center;
 width:100vw;
@@ -67,7 +67,7 @@ width:100vw;
 .lantern, #flipp{
     font-family: 'Abril Fatface', cursive;
     background-color:black;
-background-image: url(images/candelabra.jpg);
+background-image: url("/images/candelabra.jpg");
 background-size: cover;
 background-position-x: center;
 width:100vw;
@@ -101,7 +101,7 @@ height:95vh;
 .angel{
     font-family: 'Abril Fatface', cursive;
     background-color:black;
-background-image: url(images/angel.jpg);
+background-image: url("/images/angel.jpg");
 background-size: cover;
 background-position-x: center;
 width:100wv;
