updated landing page

--- a/Checkpoint-3/style.css
+++ b/Checkpoint-3/style.css
@@ -50,8 +50,7 @@ body {
   height: 200px;
   background-image: url(./images.jpg/rocket.png);
   background-size: cover;
-  border: 1px solid black;
-
+  background-position: center;
 }
 
 .weapon2 {
