--- a/03week/airplane/css/style.css
+++ b/03week/airplane/css/style.css
@@ -62,7 +62,7 @@ section div {
     color: white;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
-.depart   {
+.depart {
     text-decoration: none;
     float: left;
     background: darkblue;
@@ -86,4 +86,14 @@ section div {
     background: darkblue;
     color: white;
     font-size: 5px;
+}
+.cow form input {
+    width: 8px;
+    padding: 1px;
+}
+.box {
+    float: left;
+}
+.circle {
+    float: right;
 }
