--- a/04week/tomorrows-technology/css/style.css
+++ b/04week/tomorrows-technology/css/style.css
@@ -43,6 +43,81 @@ li {
     padding: 10px;
     font-size: 12px;
 }
+
 h2 {
     border-bottom: 1px solid black;
+}
+
+footer {
+    display: flex;
+    background-color: #5D5D5D;
+    width: 100%;
+    color: white; 
+    font-family: muli;
+    margin-top: 30px;
+}
+
+footer li {
+    border-bottom: .2px solid white;
+}
+
+a {
+    text-decoration: none;
+    font-size: 15px;
+    color: white;
+    line-height: 10px;
+}
+
+.useful {
+    width: 100%;
+    margin: 10px;
+}
+
+.social {
+    width: 100%;
+    margin: 10px;
+}
+.fab {
+    float: right;
+}
+@media (min-width: 992px) {
+    footer {
+        display: none;
+    }
+}
+
+@media (max-width: 768px) {
+    footer {
+        display: none; 
+    }
+
+    .top-stories {
+        display: none;
+    }
+
+    h1 {
+        font-size: 25px;
+    }
+
+    p {
+        font-size: 16px;
+    }
+
+    button {
+        width: 100px;
+        height: 30px;
+        background-color: #4C4C4C;
+        color: white;
+        font-size: 12px;
+    }
+}
+
+@media (max-width: 576px) {
+    h1 {
+        font-size: 18px;
+    }
+
+    footer {
+        display: flex;
+    }
 }
