--- a/checkpoint-one/css/style.css
+++ b/checkpoint-one/css/style.css
@@ -1,1 +1,36 @@
+html{
+    font-family: 'Open Sans', sans-serif;
+}
+body{
 
+}
+header{
+    font-size: 8pt;
+
+}
+h1{ 
+    width: 200px;
+}
+nav{
+    color: red;
+    width: 800px;
+    text-align: right;
+}
+main{
+
+}
+main{
+
+}
+section{
+
+}
+article{
+
+}
+p{
+
+}
+footer{
+
+}
