changed some airplane, began html for chkpt 1, began css for chkpt 1

--- a/03week/airplane/css/style.css
+++ b/03week/airplane/css/style.css
@@ -44,10 +44,36 @@ li > a {
     text-emphasis: 600;
 }
 
+.home {
+    padding-top: 2px;
+    padding-left: 20px;
+    background: url(../img/home-icon.png) left center no-repeat;
+}
+
+.deals {
+    padding-top: 2px;
+    padding-left: 20px;
+    background: url(../img/deal-icon.png) left center no-repeat;
+}
+
+.schedule {
+    padding-top: 2px;
+    padding-left: 20px;
+    background: url(../img/schedule-icon.png) left center no-repeat;
+}
+
+.login {
+    padding-top: 2px;
+    padding-left: 20px;
+    background: url(../img/login-icon.png) left center no-repeat;
+}
+
+/*
 .home::before {
     content: url(../img/home-icon.png);
     margin: 2px;
 }
+
 
 .deals::before {
     content: url(../img/deal-icon.png);
@@ -63,7 +89,7 @@ li > a {
     content: url(../img/login-icon.png);
     margin: 2px;
 }
-
+*/
 /* selector form styles */
 
 .form {
