--- a/checkpoint-one/css/style.css
+++ b/checkpoint-one/css/style.css
@@ -1,1 +1,46 @@
+.flex {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
 
+main {
+    background-image: url()
+    background-repeat: no-repeat;
+    background-size: auto;
+}
+
+.name {
+    width: 33%
+    margin: 15px;
+}
+
+li {
+    list-style-type: none;
+}
+
+.social {
+    display: inline-block;
+    width: 30px;
+    height: 30px;
+    margin: 10px;
+    border: 1px solid black;
+    border-radius: 50%
+}
+
+.switches {
+    margin-right: 10px;
+}
+
+.standby, .power {
+    width: 25px;
+    height: 30px;
+    margin: 5px;
+    border: 1px solid black;
+    border-radius: 1px;
+}
+
+main {
+    
+}
