update on checkpoint 1

--- a/checkpoint-one/css/style.css
+++ b/checkpoint-one/css/style.css
@@ -1,36 +1,85 @@
-html{
-    font-family: 'Open Sans', sans-serif;
+html {
+    font-family: "Open Sans", sans-serif;
 }
-body{
 
+body {
+    margin: 0%;
+    background-color: aquamarine;
 }
-header{
-    font-size: 8pt;
 
+.body::-webkit-scrollbar {
+    display: none;
 }
-h1{ 
-    width: 200px;
+
+header {
+    border: 2px rebeccapurple solid;
+    width: 100%;
+    height: 100px;
+    background-color: grey;
+    color: whitesmoke;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
 }
-nav{
-    color: red;
-    width: 800px;
+
+h1 {
+    width: 400px;
+    font-size: 20pt;
+    font-weight: bolder;
+    outline-color: red;
+    border: 2px rebeccapurple solid;
+    display: inline-block;
+}
+
+main {
+    height: 800px;
+    overflow: hidden;
+    padding-top: 100px;
+    margin: 10px;
+}
+
+nav {
+    border: 2px rebeccapurple solid;
+    width: 1000px;
     text-align: right;
+    display: inline-block;
 }
-main{
 
+.nav {
+    display: inline-block;
+    margin: 10px;
 }
-main{
 
+.nav:hover {
+    opacity: 0.5;
 }
-section{
 
+section {}
+
+article {}
+
+footer {
+    position: relative;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    padding-left: 50px;
+    border-top: 0.5px black solid;
+    background-color: white;
 }
-article{
 
+.footer_header {
+    font-weight: bold;
+    width: 250px;
+    border-bottom: 1px lightslategray solid;
 }
-p{
 
-}
-footer{
-
+.footer_sections {
+    font-size: 8pt;
+    display: inline-block;
+    border: 2px rebeccapurple solid;
+    vertical-align: top;
+    margin-right: 10px;
 }
