--- a/checkpoint-one/css/style.css
+++ b/checkpoint-one/css/style.css
@@ -7,6 +7,7 @@ body {
     background-color: aquamarine;
 }
 
+
 .body::-webkit-scrollbar {
     display: none;
 }
@@ -14,8 +15,8 @@ body {
 header {
     border: 2px rebeccapurple solid;
     width: 100%;
-    height: 100px;
-    background-color: grey;
+    height: 150px;
+    background-color:#47555e;
     color: whitesmoke;
     position: fixed;
     top: 0px;
@@ -24,17 +25,21 @@ header {
     bottom: 0px;
 }
 
-h1 {
-    width: 400px;
+h1, img {
+    width: 200px;
     font-size: 20pt;
     font-weight: bolder;
     outline-color: red;
-    border: 2px rebeccapurple solid;
     display: inline-block;
+    padding:0px;
+    margin: 0px;
 }
-
+/* .logo{
+    width: 40%;
+    height: auto;
+} */
 main {
-    height: 800px;
+    height: 1200px;
     overflow: hidden;
     padding-top: 100px;
     margin: 10px;
@@ -42,14 +47,14 @@ main {
 
 nav {
     border: 2px rebeccapurple solid;
-    width: 1000px;
-    text-align: right;
+    float: right;
     display: inline-block;
+    margin-top: 120px;
 }
 
 .nav {
     display: inline-block;
-    margin: 10px;
+    padding-right: 50px;
 }
 
 .nav:hover {
@@ -65,9 +70,11 @@ footer {
     right: 0;
     bottom: 0;
     left: 0;
-    padding-left: 50px;
+    padding: 20px;
+    text-align: center;
     border-top: 0.5px black solid;
     background-color: white;
+    font-size: 10pt;
 }
 
 .footer_header {
@@ -77,7 +84,6 @@ footer {
 }
 
 .footer_sections {
-    font-size: 8pt;
     display: inline-block;
     border: 2px rebeccapurple solid;
     vertical-align: top;
