--- a/checkpoint-one/css/style.css
+++ b/checkpoint-one/css/style.css
@@ -5,10 +5,8 @@
     justify-content: space-between;
 }
 
-main {
+body {
     background-image: url(../img/grillecloth2.jpg);
-    background-repeat: repeat;
-    background-size: auto;
 }
 
 header {
@@ -24,8 +22,7 @@ header {
     font-family: Noto Sans, sans-serif;
     font-size: 50pt;
     width: 33%;
-    text-shadow: 0px 0px 20px #A0A495;
-    text-shadow: 2px 2px 12px #A0A495;
+    text-shadow: 0px 0px 10px #A0A495;
     text-decoration: none;
 }
 
