--- a/checkpoint-one/css/gallery.css
+++ b/checkpoint-one/css/gallery.css
@@ -9,14 +9,14 @@ body {
     width: 100%;
 }
   
-  /* Create four equal columns that sits next to each other */
-  .column {
+  /* Create four equal columns that sit next to each other */
+.column {
     flex: 25%;
     max-width: 24%;
     padding: 0 4px;
-  }
+}
   
-  .column img {
+.column img {
     margin-top: 8px;
     vertical-align: middle;
     border: 1px solid #ccc;
@@ -25,20 +25,21 @@ body {
 
 .column img:hover {
     border: 1px solid #000;
+    box-shadow: 0px 0px 15px whitesmoke;
 }
 
   /* Responsive layout - makes a two column-layout instead of four columns */
-  @media screen and (max-width: 800px) {
+@media screen and (max-width: 800px) {
     .column {
       flex: 50%;
       max-width: 50%;
     }
-  }
+}
   
   /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
-  @media screen and (max-width: 600px) {
+@media screen and (max-width: 600px) {
     .column {
       flex: 100%;
       max-width: 100%;
     }
-  }
+}
