Updated for 16:9 resolution

--- a/checkpoint-one/css/style.css
+++ b/checkpoint-one/css/style.css
@@ -52,7 +52,7 @@ nav {
 }
 
 main {
-    height: 1500px;
+    height: auto;
     top: 150px;
     margin: 10px;
     position: relative;
@@ -66,9 +66,8 @@ main {
     height: calc(1200px - 150px);
     overflow: hidden;
     width: 100%;
-    height: 1000px;
+    height: 1300PX;
     margin: auto;
-    top: 50px;
 }
 
 /* This contains the quote */
@@ -79,9 +78,9 @@ main {
     float: left;
     color: white;
     font-weight: bolder;
-    border-radius: 5px;
     font-size: 50pt;
     margin-left: 100px;
+    margin-top: 20px;
 }
 
 /* Underlines "responsibility" */
@@ -269,6 +268,8 @@ span {
 
 .dog_pictures {
     position: absolute;
+    font-weight: bold;
+    color:#363636;
     top: 600px;
     height: auto;
     text-align: center;
@@ -284,12 +285,22 @@ span {
 .dog {
     display: inline-block;
     padding-left: 150px;
+    margin-bottom: 50PX;
 }
 
 .dog_img {
-    width: 400px;
-    height: 400px;
+    width: 300px;
+    height: 300px;
     border-radius: 50%;
+}
+.dog_img:hover{
+    opacity: .5;
+}
+
+.img_text{
+    width: 200px;
+    text-align: center;
+    padding-left: 50px;
 }
 
 footer {
@@ -304,7 +315,7 @@ footer {
 
 .footer_header {
     font-weight: bold;
-    width: 500px;
+    width: 360px;
     border-bottom: 1px lightslategray solid;
 }
 
