--- a/checkpoint-one/css/style.css
+++ b/checkpoint-one/css/style.css
@@ -1,1 +1,251 @@
+html, body {
+    height: 100%;
+    margin: 0px;
+    font-family: 'Libre Baskerville', serif;
+}
 
+    /* begin heading styling */
+
+header {
+    width: 100%;
+    height: 120px;
+    position: absolute;
+    top: 0px;
+    background-color: white;
+}
+
+h1 {
+    font-family: 'Allura', cursive;
+    font-size: 80px;
+    color: #005DAB;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+}
+
+.logo {
+    width: 120px;
+    height: 85px;
+    position: absolute;
+    top: 0px;
+    right: 0px
+}
+    /* styling for nav in header */
+nav{
+    width: 100%;
+    height: 35px;
+    position: absolute;
+    bottom: 0px;
+    background-color: #005DAB;
+}
+
+a {
+    margin: 5px 50px;
+    padding: 4px;
+    text-decoration: none;
+    color: black;
+    border: solid 1px black;
+    background-color: #F47D00;
+    float: left;
+}
+
+a:hover {
+    background-color: white;
+}
+
+    /* begin styling for buy section */
+
+.buycontainer {
+    width: 100%;
+    height: 600px;
+    position: absolute;
+    top: 120px;
+    border-top: 2px solid #F47D00;
+    background-image: url(../img/background.jpg);
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    background-position: center center;
+    background-size: cover;
+}
+
+    /* styling for buy box */
+
+.buy {
+    width: 60%;
+    height: 400px;
+    position: absolute;
+    border: solid 1px black;
+    border-radius: 10px;
+    top: 100px;
+    left: 20%;
+    background-color: rgba(58, 58, 58, 0.7);
+}
+
+h2{
+    width: 100%;
+    font-size: 40px;
+}
+
+.buyheading {
+    position: absolute;
+    top: 100px;
+    text-align: center;
+}
+
+.buybox {
+    width: 100%;
+}
+
+    /* begin styling for all input fields */
+
+input {
+    height: 25px;
+    margin: 0px;
+    border: 2px solid black;
+    border-radius: 5px;
+    background-color: rgb(255, 169, 78);
+}
+
+select {
+    height: 31px;
+    margin: 0px;
+    border: 2px solid black;
+    border-radius: 5px;
+    background-color: rgb(255, 169, 78);
+}
+
+input [type='submit'] {
+    height: 31px;
+}
+
+    /* end styling for all inputs */
+    /* begin styling for inputs in buy box */
+
+.buybox {
+    position: absolute;
+    bottom: 200px;
+    left: 10px;
+}
+
+.buyaddress {
+    width: 33%;
+}
+
+.small {
+    width: 10%;
+}
+
+    /* end styling for inputs in buy box */
+    /* begin styling for sell box */
+
+.sellcontainer {
+    height: 200px;
+    width: 100%;
+    border-top: 2px solid #F47D00;
+    position: absolute;
+    top: 720px;
+    background-color: white;
+}
+
+.sellheading {
+    width:100%;
+    text-align: center;
+    position: absolute;
+    top: 40px;
+}
+
+.selltagline {
+    width:100%;
+    text-align: center;
+    position: absolute;
+    top: 85px;
+}
+
+.sellbox {
+    width: 40%;
+    margin-left: auto;
+    margin-right: auto;
+    position: absolute;
+    left: 0px;
+    right: 0px;
+    top: 140px;
+}
+
+.selladdress {
+    width: 80%;
+    margin-top: auto;
+    margin-bottom: auto;
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    bottom: 0px;
+}
+
+.sellsearch {
+    width: 18%;
+    margin-top: auto;
+    margin-bottom: auto;
+    position: absolute;
+    right: 0px;
+    top: 0px;
+    bottom: 0px;
+}
+
+    /* begin styling for listings */
+
+.listingcontainer {
+    width: 100%;
+    height: 400px;
+    position: absolute;
+    top: 920px;
+    border-top: 2px solid #F47D00;
+    background-color: #005DAB;
+}
+
+.listingheading {
+    width:100%;
+    text-align: center;
+    position: absolute;
+    top: 40px;
+}
+
+.listings {
+    width: 80%;
+    height: 220px;
+    margin-left: auto;
+    margin-right: auto;
+    position: absolute;
+    top: 100px;
+    left: 0px;
+    right: 0px;
+}
+
+.listing1 {
+    float: left;
+}
+
+.listing2 {
+    float: left;
+}
+
+.listing3 {
+    float: left;
+}
+
+.pic {
+    height: 220px;
+    width: 220px;
+    margin: 15px;
+    float: left;
+}
+
+.listingtext {
+    height: 200px;
+    width: 150px;
+    margin: 15px;
+    padding: 5px;
+    border: solid 1px black;
+    border-radius: 5px;
+    float: left;
+    background-color: white;
+}
