fixed anchor links partially hiding under static header

--- a/checkpoint-one/css/style.css
+++ b/checkpoint-one/css/style.css
@@ -41,7 +41,7 @@ header {
     color: black;
 }
 
-span {
+a > span {
     color: red;
     font-size: 55pt;
 }
@@ -138,10 +138,19 @@ main {
     margin-bottom: 120px;
 }
 
-/* ----- gallery container ----- */
 #about {
     width: 85%;
     font-size: 20pt;
+}
+
+.anchor {
+    position: relative;
+}
+
+.anchor a {
+    position: absolute;
+    left: 0;
+    top: -175px;
 }
 
 #about h1 {
