fixed gallery h1 size and anchor woes

--- a/checkpoint-one/css/style.css
+++ b/checkpoint-one/css/style.css
@@ -164,13 +164,10 @@ main {
 }
 
 /* ----- gallery ----- */
-.images {
-    font-size: 26px;
-}
-
 .images h1 {
+    font-size: 26pt;
     width: 85%;
-    margin: 0 auto;
+    margin: 10 auto;
     margin-bottom: 0px;
     border-bottom: 1px solid whitesmoke;
 }
