minor changes to header etc

--- a/checkpoint-one/css/style.css
+++ b/checkpoint-one/css/style.css
@@ -30,20 +30,21 @@ header {
 
 .name {
     margin-left: 40pt;
-    font-size: 50pt;
     width: 33%;
-    text-shadow: 0px 0px 10px #A0A495;
+    color: whitesmoke;
+    font-size: 54pt;
+    text-shadow: 0px 0px 20px #0C0503;
     text-decoration: none;
 }
 
 .name:visited {
     text-decoration: none;
-    color: black;
+    color: whitesmoke;
 }
 
 a > span {
     color: red;
-    font-size: 55pt;
+    font-size: 56pt;
 }
 
 ul {
@@ -87,7 +88,6 @@ li {
 }
 
 .fa:hover {
-    opacity: 0.9;
     box-shadow: 0px 0px 10px whitesmoke;
 }
 
@@ -150,7 +150,7 @@ main {
 .anchor a {
     position: absolute;
     left: 0;
-    top: -175px;
+    top: -180px;
 }
 
 #about h1 {
@@ -167,7 +167,7 @@ main {
 .images h1 {
     font-size: 26pt;
     width: 85%;
-    margin: 10 auto;
+    margin: auto;
     margin-bottom: 0px;
     border-bottom: 1px solid whitesmoke;
 }
