--- a/03week/airplane/css/style.css
+++ b/03week/airplane/css/style.css
@@ -16,14 +16,25 @@ header {
     position: relative;
     top: 25px;
     right: 100px;
+    padding: 5px;
+    padding-right: 10px;
 }
 
 
 a:link {
     text-decoration: none;
     color: white;
-    
 }
+
+a:visited {
+    text-decoration: none;
+    color: white;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
 
 article {
     padding-left: 75px;
@@ -152,5 +163,7 @@ input[type="radio"] {
     font-weight: bold;
     border-radius: 4px;
 }
+
+
 
 
