--- a/checkpoint-one/css/style.css
+++ b/checkpoint-one/css/style.css
@@ -1,1 +1,261 @@
+html {
+    margin: 0;
+    padding: 0;
+}
 
+body {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    background: #307FBF;
+
+}
+/*HEADER*/ /*HEADER*/ /*HEADER*/ /*HEADER*/ /*HEADER*/
+
+header {
+    float: left;
+    width: 100%;
+    background: #60ACDC;
+
+    margin: 0px;
+    padding: 0px;
+    height: 175px;
+}
+
+
+header img {
+    float: left;
+    width: 250px;
+    padding: 0;
+    margin: 0;
+}
+
+.header_buttons button {
+    
+    width: 120px;
+    height: 35px;
+
+    background-color: #892529;
+    border: 1px solid white;
+    border-radius: 12px;
+    color: white;
+
+    text-align: center;
+    font-size: 12px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+header ul {
+    float: left;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    position: relative;
+    left: -250px;
+    
+    margin-top: 100px;
+    right: 10px;
+}
+
+header li {
+    float: left;
+
+}
+
+
+.fa {
+    font-size: 30px;
+    width: 30px;
+    text-align: center;
+    text-decoration: none;
+    border: 1px solid black;
+    cursor: pointer;
+    padding: 15px;
+}
+
+button:hover {
+    opacity: 0.7;
+}
+
+.fa-facebook {
+    background: #3b5998;
+    color: white;
+}
+
+.fa-google {
+    background: #dd4b39;
+    color: white;
+}
+
+.social {
+    float: right;
+    margin-right: 15px;
+}
+
+header p {
+    position: absolute;
+    font-size: 40px;
+    color: white;
+    float: left;
+    margin-left: 300px;
+    margin-top: 50px;
+
+    font-family: Comic Sans MS, Comic Sans, cursive;
+}
+
+header span {
+    color: #892529;
+    font-style: italic;
+
+}
+
+/*NAVIGATION*/ /*NAVIATION*/ /*NAVIGATION*/ /*NAVIGATION*/
+
+nav {
+    background-color: #60ACDC;
+    overflow: hidden;
+    width: 100%;
+    border: 2px solid #892529;
+}
+
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    background-color: #60ACDC;
+
+}
+
+nav li {
+    float: left;
+    text-align: center;
+    padding: 14px 16px;
+    font-size: 17px;
+    border-right: 1px solid #892529;
+    color: white;
+    width: 11%;
+    cursor: pointer;
+    display: inline;
+}
+
+nav a {
+    text-decoration: none;
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+}
+nav li:hover {
+    background-color: #892529;
+    color: white;
+}
+
+/*MAIN MAIN MAIN MAIN MAIN MAIN MAIN MAIN MAIN MAIN */
+
+.row  {
+    width: 100%;
+}
+
+/* Column Layout */
+
+.column {
+    float: left;
+    padding: 10px;
+}
+
+.left {
+    width: 20%;
+}
+
+.right {
+    width: 20%;
+}
+
+.middle {
+    width: 40%;
+} 
+.row::after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+@media screen and (max-width: 1000px) {
+    .column {
+        width: 100%;
+        height: 100%;
+    }
+}
+
+.left {
+    color: white;
+    font-size: 22px;
+    border-right: 2px solid white;
+    height: 100%;
+}
+
+.middle {
+    border-right: 2px solid white;
+    height: 100%;
+}
+.middle img {
+    width: 95%;
+    padding: 10px;
+}
+
+.right {
+    height: 100%;
+}
+.right img {
+    width: 150px;
+    height: 100%;
+}
+
+#delivery_button {
+    width: 250px;
+    height: 100px;
+    background: #892529;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 24px;
+    border-radius: 10%;
+}
+
+.right a {
+    text-decoration: none;
+    color: white;
+}
+
+.right h2 {
+    text-align: center;
+    text-decoration: underline;
+    font-size: 32px;
+}
+
+.right img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
+    padding: 10px;
+}
+.right button {
+    width: 250px;
+    height: 25px;
+    background: #892529;
+    color: white;
+    padding-bottom: 5px;
+    cursor: pointer;
+}
+
+/*FOOTER FOOTER FOOTER */
+
+footer {
+    width: 100%;
+    color: white;
+    background-color: #60ACDC;
+    float: right;
+    text-align: center;
+    margin-right: 5px;
+    padding-right: 10px;
+    height: 250x;
+}
