checkpoint one page

--- a/checkpoint-one/css/style.css
+++ b/checkpoint-one/css/style.css
@@ -1,1 +1,84 @@
+header {
+    background-color: #112F41;
+    padding: 15px !important;
+    position: relative !important;
+    color: white;
+    font-size: 40px;
+}
+h1{
+    font-family: 'Pacifico', cursive !important;
+    position: absolute;
+    left: 100px;
+    top: 30px;
+    font-size: 35px !important;
+}
 
+/* Below is font used for all body text */
+
+
+body {
+    font-family: 'Quicksand', sans-serif !important;
+}
+
+.credentials {
+    color: white;
+    text-align: right;
+ }
+
+.dog {
+    width: auto;
+    position: absolute;
+    top: 10px;  
+    left: 0;
+    z-index: -1;
+}
+
+.dogimage {
+    max-height:100%; 
+    max-width:100%;   
+}
+
+.maintext {
+    position: relative;
+    bottom: 650px;
+    text-align: center;
+    font-size: 60px;
+    color: #ED553B;
+}
+
+.subtext {
+    position: relative;
+    bottom: 650px;
+    text-align: center;
+    font-size: 35px;
+    color: #068587;
+}
+.overdog {
+    position: absolute;
+    top: 300px;
+    right: 425px;
+}
+
+.zipcode {
+    width: 300px;
+    height: 40px;
+    border: solid;
+    border-color: #4FB99F;
+    border-width: 2px;
+}
+
+/* below is button to submit area code*/
+
+
+.zipcodesubmit {
+    height: 40px;
+    border: solid;
+    background-color: #4FB99F;
+    border-width: 2px;
+    border-color: #4FB99F;
+    color: white;
+}
+
+.socialmedia {
+    text-align: center;
+}
