--- a/checkpoint-one/css/style.css
+++ b/checkpoint-one/css/style.css
@@ -1,1 +1,79 @@
+body { 
+    color:white;
+    background-image: url("https://cdn.photofunia.com/effects/black-white-gallery/examples/1eiywyg_o.jpg");
+    background-position: fixed;
+    background-size: cover;
+    background-repeat: no-repeat;
+    font-family: monospace, Arial, Helvetica, sans-serif;
+    text-align: center;
+    margin:0 auto;
+}
 
+header {
+  background: black;
+  margin:10px;
+  padding:10px;
+}
+
+
+nav  {
+  padding:8px; 
+  float: right;
+}
+
+a {
+  text-decoration: none;
+  color: whitesmoke;
+  padding:10px;
+}
+
+a:hover {
+  color: pink;
+}
+
+input {
+  border: 2px solid plum;
+  border-radius: 3px;
+  padding: 5px;
+  margin:20px;
+  background: whitesmoke;
+  color:black;
+}
+
+main {
+  font-size: 40px;
+  margin-top:50px;
+}
+
+section {
+  width: 620px;
+  margin: 12px auto;
+  padding: 20px;
+}
+
+.container2 {
+  font-size: 18px;
+
+}
+
+
+.icon-bar {
+  font-size: 20px;
+  width: 400px;
+  margin:20px auto;
+  padding: 8px;    
+}
+
+i {
+  color:pink;
+}
+
+i:hover {
+  color:plum;
+}
+
+img {
+  width: 180px;
+  margin-bottom:10px;
+
+}
