created local business website

--- a/03week/airplane/css/style.css
+++ b/03week/airplane/css/style.css
@@ -41,9 +41,9 @@ a:active {
 main {
         background-image: url("../img/airline.jpg");
         background-size: cover;
+        background-repeat: no-repeat;
         padding-top: 100px;
         padding-left: 100px;
-        height: 1000px;
 }
 
 section {
