--- a/checkpoint-one/main.css
+++ b/checkpoint-one/main.css
@@ -3,6 +3,10 @@
     font-family: 'Lato', sans-serif;
 }
 
+body{
+    background-color: #1C0E0B;    background-color: 
+}
+
 
 /*Navigation Bar*/
 
