update text box and button in NASA project

--- a/04week/nasa/css/style.css
+++ b/04week/nasa/css/style.css
@@ -7,7 +7,6 @@ body {
 header {
     display: flex;
     justify-content: center;
-    width: 850px;
     height: 480px;
     background-image: url("../img/nasa-background.jpg");
     background-repeat: no-repeat;
@@ -16,7 +15,6 @@ header {
 
 h1 {
     display: flex;
-    width: 850px;
     color: white;
     font-weight: bolder;
     font-size: 70pt;
@@ -24,7 +22,6 @@ h1 {
 }
 
 section {
-    width: 850px;
     height: 324px;
     display: flex;
     margin-top: -10px;
@@ -71,8 +68,9 @@ div {
     align-items: center;
     margin-top: 10px;
     color: white;
+    font-size: 12pt;
     font-weight: bold;
     background-color: #4d4d4d;
-    width: 100px;
+    width: 75px;
     height: 30px;
 }
