--- a/checkpoint-one/css/style.css
+++ b/checkpoint-one/css/style.css
@@ -35,6 +35,7 @@ header {
     font-size: 54pt;
     text-shadow: 0px 0px 20px #0C0503;
     text-decoration: none;
+    font-weight: 700;
 }
 
 .name:visited {
@@ -45,6 +46,7 @@ header {
 a > span {
     color: red;
     font-size: 56pt;
+    font-weight: 900;
 }
 
 ul {
