--- a/checkpoint-one/css/style.css
+++ b/checkpoint-one/css/style.css
@@ -1,1 +1,164 @@
-
+header {
+    height: 170px;
+    width: 100%;
+    background-image: linear-gradient(rgb(206, 2, 87), #F05193, #F05193, #F05193);
+    position: relative;
+    border-bottom: black 2px solid;
+}
+/* social media icons */
+header img{
+    z-index: 1; position: relative;
+    margin-right: 25px;
+    float: right;
+    bottom: 25px;
+    right: 10px;
+}
+/* logo: Today's */
+header h1 {
+    font-size: 90px;
+    text-align: center;
+    color: white;
+    font-family: 'Montserrat', sans-serif;
+    position: relative;
+    top: 0px;
+}
+/* logo Boutique */
+header h3 {
+    font-size: 45px;
+    text-align: center;
+    color: white;
+    font-family: 'Montserrat', sans-serif;
+    position: relative;
+    bottom: 30px;
+}
+/* white navigation bar */
+nav {
+    position: relative;
+    bottom: 30px;
+    width: 100%;
+    height: 22px;
+    background-color: rgb(255, 255, 255);
+    text-align: center;
+}
+/* Home..About us..etc */
+nav a {
+    color: rgb(0, 0, 0);
+    font-family: 'Contrail One', cursive;
+    text-decoration: none;
+    font-size: 18px;
+    margin: 25px ;
+    left: 82px;
+    position: relative;
+}
+a:hover {
+    color: #F05193;
+    text-decoration: underline;
+    
+}
+/* store bio with three pix */
+.topbox {
+    width: 100%;
+    position: relative;
+    background-image: linear-gradient(to right, rgb(129, 189, 230), white);
+    height: 200px;
+    width: 100%;
+}
+.storebio {
+    position: relative;
+    top: 14px;
+    left: 45px;
+    text-indent: 25px;
+    text-align: justify;
+    padding: 6px;
+    width: 250px;
+    height: 82%;
+    float: left;
+    margin-left: 20px;
+    font-family: 'Alegreya', serif;
+    font-size: 14.5px;
+    color: black;
+    background-color: white;
+    /* background-image: linear-gradient(rgb(206, 2, 87), #F05193, #F05193, #F05193); */
+    border: rgb(182, 180, 180) 0.5px solid;
+    border-radius: 10px;
+}
+.topbox img {
+    margin: 0px;
+    margin-right: 50px;
+    border: #F05193 6px solid;
+    position: relative;
+    left: 130px;
+    top: 20px;
+}
+.clothing {
+    float: left;
+}
+.jewelry {
+    float: left;
+}
+.accessories {
+    float: left;
+    position: relative;
+    bottom: 9px; 
+}
+.secondrow {
+    /* background-color: #F05193; */
+    background-image: linear-gradient(#F05193, #F05193, #F05193, rgb(206, 2, 87));
+}
+.boxylady {
+    float: inherit;
+    width: 70%;
+    height: 100%;
+    /* border-right: 2px black solid; */
+}
+/* Women’s Fashion Boutique */
+.secondrow h1 {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 30px;
+    text-align: center;
+    padding-top: 15px;
+}
+/* Best on the Emerald Coast */
+.secondrow h3 {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 20px;
+    text-align: center;
+    border-bottom: black 1px dashed;
+}
+.descriptiontext {
+    text-indent: 25px;
+    text-align: justify;
+    font-family: 'Alegreya', serif;
+    padding: 15px;
+    font-size: 14px;
+    background-color: white;
+    border-radius: 25px;
+    margin-top: 10px;
+    margin-bottom: 30px;
+}
+.contactus {
+    position: absolute;
+    top:450px;
+    right: 0px;
+    width: 180px;
+    height: 360px;
+    margin-right: 100px;
+    background-color: rgb(255, 177, 242);
+    float: right;
+    border: black 2px solid;
+}
+.contactus h1 {
+    font-family: 'Montserrat', sans-serif;
+}
+.contactus h3 {
+    margin-top: 12px;
+}
+input[type=text] {
+    height:20px;
+    width: 96%;
+}
+input[type=submit] {
+    position: absolute;
+    left: 65px;
+    bottom:20px;
+}
